samples/_failures_safe/1761126830_bf7320_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2ecb2a31.c: In function ‘main’:
./samples/SAFE/__tmp_2ecb2a31.c:163:29: error: missing terminating " character
  163 |             fprintf(stderr, "Compression verification
      |                             ^~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_2ecb2a31.c:163:13: error: expected expression at end of input
  163 |             fprintf(stderr, "Compression verification
      |             ^~~~~~~
./samples/SAFE/__tmp_2ecb2a31.c:163:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2ecb2a31.c:163:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2ecb2a31.c:163:13: error: expected declaration or statement at end of input
